--- a/.config/i3/config
+++ b/.config/i3/config
@@ -13,6 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
+#font pango:monospace 8
 font pango:monospace 8
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
@@ -33,6 +34,8 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec urxvt
+#bindsym $mod+Return exec terminator
+#bindsym $mod+Return exec termite
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -42,6 +45,10 @@ bindsym $mod+Shift+q kill
 
 # Or start Rofi
 bindsym $mod+d exec rofi -show run -fg "#505050" -bg "#000000" -hlfg "#ffb964" -hlbg "#000000" -width 30 -lines 10 -padding 20 -separator-style none -hide-scrollbar -bw 4 -bc "#111111" 
+
+#connman_dmenu
+#bindsym $mod+shift+d exec gksu connman_dmenu
+bindsym $mod+shift+d exec networkmanager_dmenu
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
@@ -184,10 +191,10 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
+        bindsym h resize shrink width 10 px or 10 ppt
+        bindsym j resize grow height 10 px or 10 ppt
+        bindsym k resize shrink height 10 px or 10 ppt
+        bindsym l resize grow width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
@@ -218,6 +225,7 @@ for_window [class="chromium"] border pixel 1
 for_window [class="chrome"] border pixel 1
 for_window [class="Pale moon"] border pixel 1
 for_window [class="Opera"] border pixel 1
+for_window [class="qutebrowser"] border pixel 1
 #for_window [class="Geary"] border pixel 0
 #for_window [class="Lmms"] border pixel 0
 #for_window [class="Feh"] border pixel 0
@@ -225,18 +233,20 @@ for_window [class="Terminator"] border pixel 1, floating disable
 
 # --- Assignment to Workspace -- #
 assign [class="(?i)kate"] 5
-assign [class="(?i)gvim"] 5
+assign [class="(?i)gvim"] 10
 assign [class="(?i)qbittorrent"] T
 assign [class="(?i)Firefox"] 3
 assign [class="(?i)chromium"] 3
 assign [class="(?i)Pale moon"] 3
 assign [class="(?i)chrome"] 3
 assign [class="(?i)Opera"] 3
+assign [class="(?i)qutebrowser"] 3
 assign [class="(?!)Intellij"] 10
 assign [class="(?!)jetbrains-pycharm-ce"] 10
 assign [class="(?!)jetbrains-pycharm"] 10
 assign [class="(?!)sun-awt-X11-XDialogPeer"] 10
 assign [class="(?!)jetbrains-rubymine"] 10
+assign [class="(?!)virtualbox"] P
 assign [class="(?!)sun-awt-X11-XFramePeer"] 10
 assign [class="(?i)8 Puzzle Solution by A* Algorithm"] T
 
@@ -273,13 +283,16 @@ bindsym XF86AudioPause exec playerctl pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
+exec --no-startup-id xmodmap -e "keycode 135 = XF86AudioNext"
 
 #exec --no-startup-id nitrogen --restore
 exec --no-startup-id feh --bg-scale /home/torsho/Pictures/arch-linux-wallpaper.jpg 
 exec --no-startup-id nm-applet
+#exec --no-startup-id cmst -m
+#exec --no-startup-id connmand
 #exec --no-startup-id connmand
 #exec --no-startup-id cmst
-#exec --no-startup-id dropbox                   #nethog
+exec --no-startup-id dropbox                   #nethog
 exec --no-startup-id ibus-daemon --xim -d
 exec --no-startup-id blueman-applet
 #exec --no-startup-id blueberry-tray
@@ -287,7 +300,7 @@ exec --no-startup-id i3session restore
 exec --no-startup-id rescuetime
 exec --no-startup-id compton
 exec --no-startup-id kdeinit5
-exec --no-startup-id pamac-tray
+#exec --no-startup-id pamac-tray
 exec --no-startup-id xfce4-power-manager
 exec --no-startup-id aclidswitch
 #exec --no-startup-id tilda
@@ -296,6 +309,8 @@ exec --no-startup-id mocp-scrobbler.py
 exec --no-startup-id lxqt-policykit-agent
 #exec --no-startup-id setxkbmap -option caps:swapescape
 exec --no-startup-id redshift
+#exec --no-startup-id udiskie --tray
+exec --no-startup-id qbittorrent
 
 #touchpad settigns
 exec --no-startup-id "synclient TapButton1=1"
