--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -232,7 +232,9 @@ set autoupdate_cumulative_size false
 set show_cursor false
 
 # One of: size, natural, basename, atime, ctime, mtime, type, random
-set sort natural
+#set sort natural
+set sort mtime
+#setlocal path=~/PCourses/ sort natural
 
 # Additional sorting options
 set sort_reverse false
