--- a/ranger/.config/ranger/rifle.conf
+++ b/ranger/.config/ranger/rifle.conf
@@ -242,7 +242,7 @@ mime ^ranger/x-terminal-emulator, has guake = guake -ne "$@"
 mime ^ranger/x-terminal-emulator, has tilda = tilda -c "$@"
 mime ^ranger/x-terminal-emulator, has st = st -e "$@"
 mime ^ranger/x-terminal-emulator, has terminator = terminator -x "$@"
-mime ^ranger/x-terminal-emulator, has urxvt = urxvt -e "$@"
+mime ^ranger/x-terminal-emulator, has urxvt = urxvt -pe selection-to-clipboard -e "$@"
 mime ^ranger/x-terminal-emulator, has pantheon-terminal = pantheon-terminal -e "$@"
 mime ^ranger/x-terminal-emulator, has lxterminal = lxterminal -e "$@"
 mime ^ranger/x-terminal-emulator, has mate-terminal = mate-terminal -x "$@"
