--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,26 @@ sshpass_cred.sh
 ssh_cred.sh
 ranger/.config/ranger/bookmarks
 .gitsecret/keys/random_seed
+# Created by https://www.toptal.com/developers/gitignore/api/tags
+# Edit at https://www.toptal.com/developers/gitignore?templates=tags
+
+### Tags ###
+# Ignore tags created by etags, ctags, gtags (GNU global) and cscope
+TAGS
+.TAGS
+!TAGS/
+tags
+.tags
+!tags/
+gtags.files
+GTAGS
+GRTAGS
+GPATH
+GSYMS
+cscope.files
+cscope.out
+cscope.in.out
+cscope.po.out
+
+
+# End of https://www.toptal.com/developers/gitignore/api/tags
