--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -353,7 +353,7 @@ exec --no-startup-id flameshot
 exec --no-startup-id google-chrome-stable --no-startup-window --password-store=gnome
 #exec --no-startup-id chromium-browser --no-startup-window --password-store=gnome
 exec --no-startup-id /usr/lib/policykit-1-gnome/polkit-gnome-authentication-agent-1 &
-#exec --no-startup-id /usr/bin/gnome-keyring-daemon --start --components=secrets
+exec --no-startup-id /usr/bin/gnome-keyring-daemon --start --components=secrets
 exec --no-startup-id xbindkeys
 
 # Keyboard layout
