--- a/devices/b150m/sway/.config/sway/config
+++ b/devices/b150m/sway/.config/sway/config
@@ -1,23 +1,12 @@
-# Default config for sway
-#
-# Copy this to ~/.config/sway/config and edit it to your liking.
-#
-# Read `man 5 sway` for a complete reference.
-
-### Variables
-#
-# Logo key. Use Mod1 for Alt.
 set $mod Mod4
-# Home row direction keys, like vim
+
 set $left h
 set $down j
 set $up k
 set $right l
-# Your preferred terminal emulator
+
 set $term alacritty
-# Your preferred application launcher
-# Note: pass the final command to swaymsg so that the resulting window can be opened
-# on the original workspace that the command was run on.
+
 set $menu dmenu_path | dmenu | xargs swaymsg exec --
 
 include /etc/sway/config-vars.d/*
@@ -37,11 +26,11 @@ include /etc/sway/config-vars.d/*
 #
 # Example configuration:
 #
-# exec swayidle -w \
-#          timeout 300 'swaylock -f -c 000000' \
-#          timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
-#          before-sleep 'swaylock -f -c 000000'
-#
+exec swayidle -w \
+         timeout 300 'swaylock -f -c 000000' \
+         timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
+         before-sleep 'swaylock -f -c 000000'
+
 # This will lock your screen after 300 seconds of inactivity, then turn off
 # your displays after another 300 seconds, and turn your screens back on when
 # resumed. It will also lock your screen before your computer goes to sleep.
@@ -132,28 +121,43 @@ bindsym $mod+Home mode "$mode_system"
 #
 # Workspaces:
 #
-    # Switch to workspace
-    bindsym $mod+1 workspace number 1
-    bindsym $mod+2 workspace number 2
-    bindsym $mod+3 workspace number 3
-    bindsym $mod+4 workspace number 4
-    bindsym $mod+5 workspace number 5
-    bindsym $mod+6 workspace number 6
-    bindsym $mod+7 workspace number 7
-    bindsym $mod+8 workspace number 8
-    bindsym $mod+9 workspace number 9
-    bindsym $mod+0 workspace number 10
-    # Move focused container to workspace
-    bindsym $mod+Shift+1 move container to workspace number 1
-    bindsym $mod+Shift+2 move container to workspace number 2
-    bindsym $mod+Shift+3 move container to workspace number 3
-    bindsym $mod+Shift+4 move container to workspace number 4
-    bindsym $mod+Shift+5 move container to workspace number 5
-    bindsym $mod+Shift+6 move container to workspace number 6
-    bindsym $mod+Shift+7 move container to workspace number 7
-    bindsym $mod+Shift+8 move container to workspace number 8
-    bindsym $mod+Shift+9 move container to workspace number 9
-    bindsym $mod+Shift+0 move container to workspace number 10
+    bindsym $mod+1 workspace 1
+    bindsym $mod+2 workspace 2
+    bindsym $mod+3 workspace 3
+    bindsym $mod+4 workspace 4
+    bindsym $mod+5 workspace 5
+    bindsym $mod+6 workspace 6
+    bindsym $mod+7 workspace 7
+    bindsym $mod+8 workspace 8
+    bindsym $mod+9 workspace 9
+    bindsym $mod+0 workspace 10
+    bindsym $mod+t workspace T
+    bindsym $mod+y workspace Y
+    bindsym $mod+u workspace U
+    bindsym $mod+i workspace I
+    bindsym $mod+o workspace O
+    bindsym $mod+p workspace P
+    bindsym $mod+Tab workspace next
+    bindsym $mod+Shift+Tab workspace prev
+
+
+    # move focused container to workspace
+    bindsym $mod+Shift+1 move container to workspace 1
+    bindsym $mod+Shift+2 move container to workspace 2
+    bindsym $mod+Shift+3 move container to workspace 3
+    bindsym $mod+Shift+4 move container to workspace 4
+    bindsym $mod+Shift+5 move container to workspace 5
+    bindsym $mod+Shift+6 move container to workspace 6
+    bindsym $mod+Shift+7 move container to workspace 7
+    bindsym $mod+Shift+8 move container to workspace 8
+    bindsym $mod+Shift+9 move container to workspace 9
+    bindsym $mod+Shift+0 move container to workspace 10
+    bindsym $mod+Shift+t move container to workspace T
+    bindsym $mod+Shift+y move container to workspace Y
+    bindsym $mod+Shift+u move container to workspace U
+    bindsym $mod+Shift+i move container to workspace I
+    bindsym $mod+Shift+o move container to workspace O
+    bindsym $mod+Shift+p move container to workspace P
     # Note: workspaces can have any name you want, not just numbers.
     # We just use 1-10 as the default.
 #
@@ -218,44 +222,43 @@ bindsym $mod+r mode "resize"
 default_border normal
 hide_edge_borders vertical
 bindsym $mod+Control+Shift+x [class="^.*"] border toggle
-#for_window [class="^.*"] border pixel 1
-#for_window [class="URxvt"] border normal
-#for_window [class="Leafpad"] border normal
-#for_window [class="Lxappearance"] border normal
-#for_window [class="Vlc"] border pixel 0
-#for_window [class="mpv"] border pixel 0
-#for_window [class="Pcmanfm"] border pixel 0
-for_window [class="[Ff]irefox"] border pixel 1
-for_window [class="chromium"] border pixel 1
-for_window [class="Chromium"] border pixel 1
-for_window [class="chrome"] border pixel 1
-for_window [class="Pale moon"] border pixel 1
-for_window [class="Opera"] border pixel 1
-for_window [class="qutebrowser"] border pixel 1
-#for_window [class="Geary"] border pixel 0
-#for_window [class="Lmms"] border pixel 0
-#for_window [class="Feh"] border pixel 0
-for_window [class="Terminator"] border pixel 1, floating disable
+#for_window [app_id="^.*"] border pixel 1
+#for_window [app_id="URxvt"] border normal
+#for_window [app_id="Leafpad"] border normal
+#for_window [app_id="Lxappearance"] border normal
+#for_window [app_id="Vlc"] border pixel 0
+#for_window [app_id="mpv"] border pixel 0
+#for_window [app_id="Pcmanfm"] border pixel 0
+for_window [app_id="firefox"] border pixel 1
+for_window [app_id="chromium"] border pixel 1
+for_window [app_id="chrome"] border pixel 1
+for_window [app_id="Pale moon"] border pixel 1
+for_window [app_id="Opera"] border pixel 1
+for_window [app_id="qutebrowser"] border pixel 1
+#for_window [app_id="Geary"] border pixel 0
+#for_window [app_id="Lmms"] border pixel 0
+#for_window [app_id="Feh"] border pixel 0
+for_window [app_id="Terminator"] border pixel 1, floating disable
 
 # --- Assignment to Workspace -- #
-assign [class="(?i)kate"] 5
-assign [class="(?i)mattermost"] 5
-#assign [class="(?i)gvim"] 10
-assign [class="(?i)qbittorrent"] T
-assign [class="(?i)Firefox"] 3
-assign [class="(?i)chromium"] 3
-assign [class="(?i)Pale moon"] 3
-assign [class="(?i)chrome"] 3
-assign [class="(?i)Opera"] 3
-assign [class="(?i)qutebrowser"] 3
-assign [class="(?!)Intellij"] 10
-assign [class="(?!)jetbrains-pycharm-ce"] 10
-assign [class="(?!)jetbrains-pycharm"] 10
-assign [class="(?!)sun-awt-X11-XDialogPeer"] 10
-assign [class="(?!)jetbrains-rubymine"] 10
-assign [class="(?!)virtualbox"] P
-assign [class="(?!)Spotify"] U
-assign [class="(?!)sun-awt-X11-XFramePeer"] 10
+assign [app_id="kate"] 5
+assign [app_id="mattermost"] 5
+#assign [app_id="gvim"] 10
+assign [app_id="qbittorrent"] T
+assign [app_id="firefox"] 3
+assign [app_id="chromium"] 3
+assign [app_id="Pale moon"] 3
+assign [app_id="chrome"] 3
+assign [app_id="opera"] 3
+assign [app_id="qutebrowser"] 3
+assign [app_id="Intellij"] 10
+assign [app_id="jetbrains-pycharm-ce"] 10
+assign [app_id="jetbrains-pycharm"] 10
+assign [app_id="sun-awt-X11-XDialogPeer"] 10
+assign [app_id="jetbrains-rubymine"] 10
+assign [app_id="virtualbox"] P
+assign [app_id="Spotify"] U
+assign [app_id="sun-awt-X11-XFramePeer"] 10
 #
 # Status Bar:
 #
@@ -265,7 +268,8 @@ bar {
 
     # When the status_command prints a new line to stdout, swaybar updates.
     # The default just shows the current date and time.
-    status_command i3blocks
+    # status_command i3blocks
+    status_command swaybar_command waybar
     # status_command while date +'%Y-%m-%d %I:%M:%S %p'; do sleep 1; done
 
     colors {
@@ -288,7 +292,6 @@ bindsym XF86MonBrightnessUp exec light -A 2
 # Touchpad controls
 bindsym XF86TouchpadToggle exec /home/torsho/toggletouchpad.sh # toggle touchpad
 
- 
 # Media player controls
 bindsym XF86AudioPlay exec playerctl play-pause
 bindsym XF86AudioPause exec playerctl pause
@@ -321,7 +324,6 @@ exec --no-startup-id blueman-applet
 #exec --no-startup-id xcompmgr -c -l0 -t0 -r0 -o.00
 #exec --no-startup-id kdeinit5
 #exec --no-startup-id pamac-tray
-exec --no-startup-id xfce4-power-manager
 exec --no-startup-id aclidswitch
 #exec --no-startup-id tilda
 #exec --no-startup-id megasync
@@ -338,7 +340,6 @@ exec --no-startup-id google-chrome-stable --no-startup-window --password-store=g
 #exec --no-startup-id chromium-browser --no-startup-window --password-store=gnome
 exec --no-startup-id /usr/lib/policykit-1-gnome/polkit-gnome-authentication-agent-1 &
 exec --no-startup-id /usr/bin/gnome-keyring-daemon --start --components=secrets
-exec --no-startup-id xbindkeys
 
 # Keyboard layout
 exec --no-startup-id "setxkbmap -layout us,bd -variant ,probhat -option grp:shifts_toggle"
